# pyifcb

./: .gitignore  .travis.yml  LICENSE  README.md  __init__.py  auto_transfer.py  environment.yml  pyproject.toml  requirements.txt  setup.py  test.txt  transfer_config.yml.example  travis.yml
.github/workflows/: pip-installation.yml  python-package.yml
docs/: Makefile  conf.py  ifcb.data.rst  ifcb.data.tests.rst  ifcb.rst  ifcb.tests.rst  index.rst  make.bat  modules.rst  refresh_autodoc.sh
ifcb/: __init__.py
ifcb/data/: __init__.py  adc.py  bins.py  export.py  files.py  h5utils.py  hdf.py  hdr.py  identifiers.py  imageio.py  io.py  matlab.py  remote.py  roi.py  stitching.py  toplevel.py  utils.py  zip.py
ifcb/data/products/: blobs.py  class_scores.py  features.py  files.py
ifcb/data/tests/: bins.py  fileset_info.py  test_adc.py  test_base_dictlike.py  test_bins.py  test_files.py  test_h5utils.py  test_hdf.py  test_hdr.py  test_identifiers.py  test_io.py  test_mat.py  test_roi.py  test_stitching.py  test_zip.py
ifcb/data/tests/data/: D20130526T095207_IFCB013.adc
ifcb/data/tests/data/data/2012/IFCB5_2012_028/: IFCB5_2012_028_081515.adc  IFCB5_2012_028_081515.hdr  IFCB5_2012_028_081515.roi
ifcb/data/tests/data/empty/: D20150411T205456_IFCB012.hdr  IFCB5_2017_001_033645.hdr
ifcb/data/tests/data/white/D2013/D201305/D20130526/: D20130526T095207_IFCB013.hdr  D20130526T095207_IFCB013.roi
ifcb/data/transfer/: __init__.py  deposit.py  remote.py  smb_utils.py
ifcb/metrics/: __init__.py  bin_metrics.py  ml_analyzed.py
ifcb/metrics/tests/: test_bin_metrics.py  test_ml_analyzed.py
ifcb/tests/: test_toplevel_api.py  utils.py
ifcb/tests/data/: bins.py  fileset_info.py  test_adc.py  test_base_dictlike.py  test_bins.py  test_files.py  test_h5utils.py  test_hdf.py  test_hdr.py  test_identifiers.py  test_io.py  test_mat.py  test_roi.py  test_stitching.py  test_zip.py
ifcb/tests/data/test_data/data/2012/IFCB5_2012_028/: IFCB5_2012_028_081515.adc  IFCB5_2012_028_081515.hdr
ifcb/tests/data/test_data/white/D2013/D201305/D20130526/: D20130526T095207_IFCB013.adc  D20130526T095207_IFCB013.hdr
ifcb/tests/metrics/: test_bin_metrics.py  test_ml_analyzed.py
ifcb/tests/test_files/: D20190929T185847_IFCB122.hdr  D20230521T210245_IFCB174.hdr  D20231021T154635_IFCB199.hdr
ifcb/tests/viz/: test_mosaic.py  test_utils.py
ifcb/viz/: blobs.py  mosaic.py  utils.py
ifcb/viz/tests/: test_mosaic.py  test_utils.py
