[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyifcb"
version = "1.2"
description = "Imaging FlowCytobot Python API, generation 2"
readme = "README.md"
authors = [{name = "Joe Futrelle", email = "jfutrelle@whoi.edu"},
            {name = "Shravani Nagala", email = "shravani.nagala@whoi.edu"}]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
]
keywords = ['FlowCytobot','Imaging','ifcb']
dependencies = [
    "scipy",
    "pandas",
    "h5py",
    "requests",
    "Pillow",
    "rectpack",
    "scikit-image",
    "pysmb",
    "smbprotocol",
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
include = [
    "ifcb/**/*",
    "docs/**/*",
    "auto_transfer.py",
    "VERSION",
    "LICENSE",
    "README.md",
    "transfer_config.yml.example",
]

[project.scripts]
auto_transfer = "auto_transfer:main"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/joefutrelle/pyifcb"
Documentation = "https://github.com/joefutrelle/pyifcb/wiki"
Issues = "https://github.com/joefutrelle/pyifcb/issues"
