[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyifcb"
version = "1.3.0"
description = "Imaging FlowCytobot Python API, generation 2"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Joe Futrelle", email = "jfutrelle@whoi.edu"},
            {name = "Shravani Nagala", email = "shravani.nagala@whoi.edu"}]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
]
keywords = ['FlowCytobot','Imaging','ifcb']
dependencies = [
    "numpy>=1.26,<2.3",
    "scipy>=1.13.1,<2",
    "pandas>=3.0.0,<4",
    "h5py>=3.12.1,<4",
    "requests>=2.32.4,<3",
    "Pillow>=12.1.1,<13",
    "rectpack>=0.2.2,<1",
    "scikit-image>=0.24.0,<1",
    "pysmb>=1.2.10,<2",
    "smbprotocol>=1.15.0,<2",
    "pyyaml>=6.0.2,<7"
]

[tool.hatch.build.targets.wheel]
include = [
    "ifcb/**/*",
    "docs/**/*",
    "auto_transfer.py",
    "VERSION",
    "LICENSE",
    "README.md",
    "transfer_config.yml.example",
]

[project.scripts]
auto_transfer = "auto_transfer:main"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/joefutrelle/pyifcb"
Documentation = "https://github.com/joefutrelle/pyifcb/wiki"
Issues = "https://github.com/joefutrelle/pyifcb/issues"
